# Copyright (C) 2007 Ian Zimmerman <itz@madbat.mine.nu>

# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the conditions spelled out in
# the file LICENSE are met.

# $Id: Makefile.am 91 2007-09-03 20:53:29Z itz $

AUTOMAKE_OPTIONS = foreign

# Emacs Lisp code.

lisp_LISP = \
	yaham.el \
	yaham-tab.el \
	yaham-skel.el \
	yaham-proc.el \
	yaham-hugs.el \
	yaham-autoloads.el

EXTRA_DIST = $(lisp_LISP) LICENSE ORIGINAL_VERSION
