dnl Copyright (C) 2007 Ian Zimmerman <itz@madbat.mine.nu>

dnl Redistribution and use in source and binary forms, with or without
dnl modification, are permitted provided that the conditions spelled out in
dnl the file LICENSE are met.

dnl $Id: configure.ac 91 2007-09-03 20:53:29Z itz $

AC_INIT([yaham], [20070903], [yaham@madbat.mine.nu])       
AC_CONFIG_SRCDIR([yaham.el])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PATH_LISPDIR
AC_CONFIG_FILES([
        Makefile
])
AC_OUTPUT
